# trendpredictor-evm

./: hardhat.config.js  package-lock.json  package.json
artifacts/contracts/TrendPredictor.sol/: TrendPredictor.dbg.json  TrendPredictor.json
backend/: package-lock.json  package.json
backend/src/: index.ts
backend/src/utils/: analyzeTrends.ts  fetchAllHeadlines.ts  fetchNYTimes.ts  fetchTopHeadlines.ts  logInsight.ts
cache/: solidity-files-cache.json
contracts/: TrendPredictor.sol
frontend/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  vite-env.d.ts
scripts/: deploy.js
test/: TrendPredictor.js
trendpredictor-agent/: .env  package-lock.json  package.json
trendpredictor-agent/backend/src/: index.ts
trendpredictor-agent/backend/src/utils/: analyzeTrends.ts  fetchGNews.ts  fetchTopHeadlines.ts  logInsight.ts
trendpredictor-agent/contracts/trendpredictor/: Cargo.toml  NOTICE
trendpredictor-agent/contracts/trendpredictor/artifacts/: checksums.txt  trendpredictor.wasm
trendpredictor-agent/contracts/trendpredictor/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
trendpredictor-agent/frontend/: package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.node.json
trendpredictor-agent/frontend/src/: App.tsx
